examples/test/testpolicy15543.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15543
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key16: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value19
          key22: value18
          key32: value7
      podSelector:
        matchLabels:
          key5: value12
          key15: value42
          key39: value2
